--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
+    "client": "file:",
+    "rimraf": "^5.0.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
